SSDM-13129 : JDK17 Build readme update